# physics-test

./: .gitignore  CONCISE_MODEL_NOTE.md  F0_anchors.md  README.md  active_context.md  alpha_image_analysis.md  bio_sanity_checks.md  freezing_the_rules.md  gauge_invariants.md  gravity_types_report.md  paper.md  pyproject.toml  repo_brain.md  requirements.txt  work_remaining.md
data/: targets.json
notebooks/: topological_gauge_explorer.ipynb
physics_test/: __init__.py  cli.py  constants.py  ew_mixing.py  forces.py  gauge_groups.py  gravity_bands.py  gut.py  model.py  normalization.py  oos.py  oos_rg.py  presets.py  qed_running.py  rg_scales.py  rg_within_band.py  scales.py  scan.py  steps.py  target_registry.py  targets.py  toponumbers.py  unification.py  units.py
tests/: test_smoke.py
